--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,10 @@
 language: scala
+
+jdk: oraclejdk8
+
 scala:
-  - 2.12.2
+   - 2.10.4
+   - 2.12.7
+
+script:
+   - sbt ++$TRAVIS_SCALA_VERSION test
